<resources>
    <string name="app_name">Snapline</string>
    <string name="app_icon">App icon</string>
    <string name="welcome_back">Welcome\nBack</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="error_short_password_char">Password must be 8 characters or more</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="error_uknown">Unknown error</string>
    <string name="error_field_cannot_be_blank">This field cannot be blank</string>
    <string name="error_invalid_email">Email is invalid</string>
    <string name="error_login_field_empty">Email and password cannot be blank</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="already_a_member">Already a member?</string>
    <string name="both_password_must_match">Both password must match</string>
    <string name="registered">Registered</string>
    <string name="account_created_successfully">Your account has been created successfully</string>
    <string name="sign_in">Sign in</string>
    <string name="post_story">Post story</string>
    <string name="story_image">Story image</string>
    <string name="photo_preview">Photo preview</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="add_a_description">Add a description</string>
    <string name="upload">Upload</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="capture_button">Capture button</string>
    <string name="switch_camera_button">Switch camera button</string>
    <string name="failed_to_start_camera">Failed to start camera</string>
    <string name="failed_to_take_photo">Failed to take photo</string>
    <string name="you_have_uploaded_your_story">You have uploaded your story</string>
    <string name="success">Success</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="logout">Logout</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="location_toggle">Location toggle</string>
    <string name="timeout">Timeout</string>
    <string name="retry">Retry</string>
    <string name="error_when_implementing_map_style">Error when implementing map style</string>
    <string name="maps">Maps</string>
</resources>